--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,9 @@
 name = "axum-router-helper"
 version = "0.1.0"
 edition = "2021"
-
+description = "A helper library for the axum router"
+license = "MIT"
+repository = "https://github.com/AlexandreBarbier/axum_router_helper"
 [features]
 default = ["base"]
 full = ["base"]
@@ -32,5 +34,5 @@ time = { version = "0.3.37", optional = true }
 tower-sessions-redis-store = { version = "0.16.0", optional = true }
 bcrypt = { version = "0.17.0", optional = true }
 jsonwebtoken = { version = "9.3.1", optional = true }
-macros = { path = "src/router/macros", optional = true }
+macros = { version = "0.1.0", path = "src/router/macros", optional = true }
 cfg-if = "1.0.0"
