--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,7 +11,7 @@ full = ["base"]
 models = ["serde"]
 base = [
     "models",
-    "macros",
+    "axum-router-helper-macros",
     "chrono",
     "log",
     "axum",
@@ -34,5 +34,5 @@ time = { version = "0.3.37", optional = true }
 tower-sessions-redis-store = { version = "0.16.0", optional = true }
 bcrypt = { version = "0.17.0", optional = true }
 jsonwebtoken = { version = "9.3.1", optional = true }
-macros = { version = "0.1.0", path = "src/router/macros", optional = true }
+axum-router-helper-macros = { path = "src/router/macros", optional = true }
 cfg-if = "1.0.0"
