--- a/src/router/macros/Cargo.toml
+++ b/src/router/macros/Cargo.toml
@@ -1,8 +1,10 @@
 [package]
-name = "macros"
+name = "axum-router-helper-macros"
 version = "0.1.0"
 edition = "2021"
-
+description = "Macros for axum-router-helper"
+license = "MIT"
+repository = "https://github.com/AlexandreBarbier/axum_router_helper/src/router/macros"
 [lib]
 proc-macro = true
 
