--- a/Cargo.toml
+++ b/Cargo.toml
@@ -34,5 +34,5 @@ time = { version = "0.3.37", optional = true }
 tower-sessions-redis-store = { version = "0.16.0", optional = true }
 bcrypt = { version = "0.17.0", optional = true }
 jsonwebtoken = { version = "9.3.1", optional = true }
-axum-router-helper-macros = { path = "src/router/macros", optional = true }
+axum-router-helper-macros = { path = "src/router/macros", version = "0.1.0", optional = true }
 cfg-if = "1.0.0"
