--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,17 +1,18 @@
 [package]
-name = "axum-router-helper"
+name = "axum-rh"
 version = "0.1.0"
 edition = "2021"
 description = "A helper library for the axum router"
 license = "MIT"
 repository = "https://github.com/AlexandreBarbier/axum_router_helper"
+
 [features]
 default = ["base"]
 full = ["base"]
 models = ["serde"]
 base = [
     "models",
-    "axum-router-helper-macros",
+    "arh-macros",
     "chrono",
     "log",
     "axum",
@@ -34,5 +35,5 @@ time = { version = "0.3.37", optional = true }
 tower-sessions-redis-store = { version = "0.16.0", optional = true }
 bcrypt = { version = "0.17.0", optional = true }
 jsonwebtoken = { version = "9.3.1", optional = true }
-axum-router-helper-macros = { path = "src/router/macros", version = "0.1.0", optional = true }
+arh-macros = { path = "src/router/macros", version = "0.1.0", optional = true }
 cfg-if = "1.0.0"
