--- a/exemples/Cargo.toml
+++ b/exemples/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2021"
 
 [dependencies]
 tokio = "1.43.0"
-axum-router-helper = { path = "../" }
+axum-rh = { path = "../" }
 axum = "0.8.1"
 serde = "1.0.217"
 serde_json = "1.0.138"
