--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,7 @@ base = [
 
 [dependencies]
 chrono = { version = "0.4.39", optional = true }
-serde = { version = "1.0.217", optional = true }
+serde = { version = "1.0.217", features = ["derive"], optional = true }
 log = { version = "0.4.25", features = ["kv"], optional = true }
 tokio = { version = "1.43.0", features = ["full"], optional = true }
 axum = { version = "0.8.1", features = ["default", "macros"], optional = true }
