--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,10 @@
 [package]
 name = "axum-rh"
-version = "0.1.1"
+version = "0.1.2"
 edition = "2021"
 description = "A helper library for the axum router"
 license = "MIT"
-repository = "https://github.com/AlexandreBarbier/axum_rh"
+repository = "https://github.com/AlexandreBarbier/axum_router_helper"
 
 [features]
 default = ["models"]
@@ -37,3 +37,4 @@ bcrypt = { version = "0.17.0", optional = true }
 jsonwebtoken = { version = "9.3.1", optional = true }
 arh-macros = { path = "src/router/macros", version = "0.1.0", optional = true }
 cfg-if = "1.0.0"
+env_logger = "0.11.6"
