--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,7 @@
 [workspace]
 resolver = "2"
 members = ["axum-rh", "macros"]
+
+[workspace.dependencies]
+log = { version = "0.4.26", features = ["kv"] }
+axum = { version = "0.8.1", features = ["default", "macros"] }
