--- a/axum-rh/Cargo.toml
+++ b/axum-rh/Cargo.toml
@@ -27,9 +27,9 @@ base = [
 [dependencies]
 chrono = { version = "0.4.39", optional = true }
 serde = { version = "1.0.218", features = ["derive"], optional = true }
-log = { version = "0.4.26", features = ["kv"], optional = true }
+log = { workspace = true, features = ["kv"], optional = true }
 tokio = { version = "1.43.0", features = ["full"], optional = true }
-axum = { version = "0.8.1", features = ["default", "macros"], optional = true }
+axum = { workspace = true, features = ["default", "macros"], optional = true }
 tower-sessions = { version = "0.14.0", optional = true }
 time = { version = "0.3.37", optional = true }
 tower-sessions-redis-store = { version = "0.16.0", optional = true }
