--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -20,4 +20,5 @@ jobs:
           override: true
       - uses: katyo/publish-crates@v2
         with:
+          registry-token: ${{ secrets.CARGO_REGISTRY_TOKEN }}
           dry-run: true
