--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -2,9 +2,7 @@ name: Rust
 
 on:
   push:
-    branches: ["feat-publish-action"]
-  pull_request:
-    branches: ["feat-publish-action"]
+    tags: "v*"
 
 env:
   CARGO_TERM_COLOR: always
