--- a/macros/Cargo.toml
+++ b/macros/Cargo.toml
@@ -1,10 +1,11 @@
 [package]
 name = "arh-macros"
-version = "0.1.2"
+version = "0.1.3"
 edition = "2021"
 description = "Macros for axum-router-helper"
 license = "MIT"
-repository = "https://github.com/AlexandreBarbier/axum_router_helper/src/router/macros"
+repository = "https://github.com/AlexandreBarbier/axum_router_helper/macros"
+
 [lib]
 proc-macro = true
 
@@ -12,5 +13,5 @@ proc-macro = true
 proc-macro2 = "1.0.93"
 quote = "1.0.38"
 syn = { version = "2.0.98", features = ["full"] }
-log = { version = "0.4.26", features = ["kv"] }
-axum = { version = "0.8.1", features = ["default", "ws", "macros"] }
+log = { workspace = true, features = ["kv"] }
+axum = { workspace = true, features = ["default", "ws", "macros"] }
