--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,7 @@
 [workspace]
 resolver = "2"
-members = ["axum-rh", "macros"]
+members = ["axum-rh", "macros", "axum-rh/exemples"]
+
 
 [workspace.dependencies]
 log = { version = "0.4.26", features = ["kv"] }
