--- a/axum-rh/exemples/Cargo.toml
+++ b/axum-rh/exemples/Cargo.toml
@@ -4,9 +4,10 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-tokio = "1.44.1"
+tokio = "1.45.1"
 axum-rh = { path = "../", features = ["base"] }
-axum = "0.8.1"
+axum = "0.8.4"
 serde = "1.0.219"
 serde_json = "1.0.140"
-env_logger = "0.11.7"
+env_logger = "0.11.8"
+log.workspace = true
