--- a/axum-rh/Cargo.toml
+++ b/axum-rh/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "axum-rh"
-version = "0.1.6"
+version = "0.1.7"
 edition = "2021"
 description = "A helper library for the axum router"
 license = "MIT"
@@ -11,24 +11,27 @@ default = ["base"]
 full = ["base"]
 models = ["serde"]
 base = [
-    "models",
     "arh-macros",
-    "chrono",
-    "log",
     "axum",
-    "tower-sessions",
-    "time",
-    "tower-sessions-redis-store",
     "bcrypt",
-    "tokio",
+    "chrono",
     "jsonwebtoken",
+    "log",
+    "models",
+    "rmp-serde",
+    "serde_json",
+    "time",
+    "tokio",
+    "tower-sessions",
+    "tower-sessions-redis-store",
+    "ureq",
 ]
 
 [dependencies]
 chrono = { version = "0.4.41", optional = true }
 serde = { version = "1.0.219", features = ["derive"], optional = true }
 log = { workspace = true, features = ["kv"], optional = true }
-tokio = { version = "1.45.1", features = ["full"], optional = true }
+tokio = { version = "1.46.1", features = ["full"], optional = true }
 axum = { workspace = true, features = ["default", "macros"], optional = true }
 tower-sessions = { version = "0.14.0", optional = true }
 time = { version = "0.3.41", optional = true }
@@ -36,5 +39,8 @@ tower-sessions-redis-store = { version = "0.16.0", optional = true }
 bcrypt = { version = "0.17.0", optional = true }
 jsonwebtoken = { version = "9.3.1", optional = true }
 arh-macros = { path = "../macros", version = "0.1.5", optional = true }
-cfg-if = "1.0.0"
+cfg-if = "1.0.1"
 env_logger = "0.11.8"
+ureq = { version = "3.0.12", optional = true }
+rmp-serde = { version = "1.3.0", optional = true }
+serde_json = { version = "1.0.140", optional = true }
